more components for the page

--- a/data/i18n/locale/en-US.json
+++ b/data/i18n/locale/en-US.json
@@ -4,7 +4,8 @@
   "complete": true,
 
   "page": {
-    "scroll-to": "click to scroll to line:"
+    "scroll-to": "click to scroll to line:",
+    "prefs-visibility": "preferences ⏷"
   },
 
   "input_words": {
